--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="A calculator app created with React.js"
     />
     <link ref='stylesheet' href="./reset.css" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
